--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css?v=pages2">
+  <link rel="stylesheet" href="styles.css?v=pages3">
 </head>
 <body>
   <header class="site-header">
@@ -133,8 +133,8 @@
       <h3 class="sheet-title">Add <span>Vinyl</span></h3>
       <div class="sheet-actions">
         <button id="fabScan" class="btn wide">Scan UPC</button>
-        <!-- Make this white/inverted -->
-        <button id="fabEnter" class="btn wide invert">Enter UPC Code</button>
+        <!-- Reverted to original color -->
+        <button id="fabEnter" class="btn wide">Enter UPC Code</button>
       </div>
       <form method="dialog"><button class="btn small subtle sheet-close">Close</button></form>
     </div>
@@ -175,6 +175,6 @@
     </article>
   </template>
 
-  <script src="app.js?v=pages2"></script>
+  <script src="app.js?v=pages3"></script>
 </body>
 </html>
