--- a/index.html
+++ b/index.html
@@ -2,20 +2,18 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Vinyl Collection</title>
 
-  <!-- GitHub Pages / static hosting: relative paths -->
-  <link rel="icon" href="favicon.svg" type="image/svg+xml" />
-  <link rel="apple-touch-icon" href="icon-192.png" />
-  <link rel="manifest" href="manifest.webmanifest" />
+  <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+  <link rel="apple-touch-icon" href="/icon-192.png" />
+  <link rel="manifest" href="/manifest.webmanifest">
   <meta name="theme-color" content="#0b0e13" />
 
-  <!-- Fonts & CSS -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="styles.css?v=fix-back-bleed">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="/styles.css?v=polish-2025-09-07">
 </head>
 <body>
   <header class="site-header">
@@ -25,15 +23,13 @@
         <h1>Vinyl Collection</h1>
       </div>
 
+      <!-- inline search -->
       <div class="search-inline">
-        <button id="searchToggle" class="icon-btn" aria-label="Search" aria-expanded="false">
-          <svg width="22" height="22" viewBox="0 0 24 24" fill="none" aria-hidden="true">
-            <circle cx="11" cy="11" r="7" stroke="currentColor" stroke-width="2"></circle>
-            <path d="M20 20L16.65 16.65" stroke="currentColor" stroke-width="2" stroke-linecap="round"></path>
-          </svg>
+        <button class="icon-btn" id="openSearch" aria-label="Search" title="Search">
+          🔎
         </button>
-        <input id="search" class="search-input" type="search" placeholder="Search albums, artists, notes…" autocomplete="off" />
-        <button id="searchClose" class="icon-btn close" aria-label="Close search" title="Close">&times;</button>
+        <input id="search" class="search-input" type="search" placeholder="Search title, artist, genre, notes…" autocomplete="off" />
+        <button class="icon-btn close" id="closeSearch" aria-label="Close search" title="Close">✕</button>
       </div>
     </div>
 
@@ -44,13 +40,16 @@
           <button id="view-grid"   class="seg-btn"         role="tab" aria-selected="false">View: Grid</button>
         </div>
 
-        <select id="sort" class="btn">
+        <select id="sort" class="btn" aria-label="Sort">
           <option value="title">Sort: Title</option>
           <option value="artist">Sort: Artist</option>
         </select>
 
         <button id="shuffle" class="btn">Shuffle</button>
         <button id="refresh" class="btn">Update Collection</button>
+
+        <button id="missingBtn" class="btn subtle" title="Show only entries without artwork">Missing Covers</button>
+        <button id="exportBtn" class="btn outline" title="Export current view to CSV">Export CSV</button>
 
         <a id="sheetLink" class="btn"
            href="https://docs.google.com/spreadsheets/d/1wNsjoZ5UcucOrTUokWfETyx_C5xMKtwWZ7LeDjdi6sI/edit?usp=sharing"
@@ -62,6 +61,9 @@
   </header>
 
   <main>
+    <!-- Genre chips bar -->
+    <section id="chipBar" class="chipbar" aria-label="Quick filters (genres)"></section>
+
     <!-- Scroll view -->
     <section id="scrollView" class="view view-scroll active" aria-label="Scroll view">
       <div id="scrollerWrap" class="scroller-wrap">
@@ -92,72 +94,91 @@
     </div>
   </dialog>
 
-  <!-- Scan Modal -->
-  <dialog id="scanModal">
-    <div class="scan-card" role="dialog" aria-label="Scan">
-      <div class="scan-head">
-        <h2>Scan</h2>
-        <div class="scan-actions">
-          <form method="dialog"><button id="closeScan" class="btn small" type="submit">Close</button></form>
-        </div>
-      </div>
-
-      <div class="video-wrap">
-        <video id="scanVideo" playsinline muted></video>
-        <div class="scan-overlay" aria-hidden="true"><div class="scan-frame"></div></div>
-        <div class="scan-hint" id="scanHint">Starting camera…</div>
-      </div>
-
-      <div id="scanStatus" class="scan-status"></div>
-
-      <form id="scanForm" class="form-grid" novalidate>
-        <label><span>Artist</span><input id="formArtist" type="text" autocomplete="off" autocapitalize="words" /></label>
-        <label><span>Title</span><input id="formTitle" type="text" autocomplete="off" autocapitalize="words" /></label>
-        <label><span>Genre</span><input id="formGenre" type="text" autocomplete="off" autocapitalize="words" /></label>
-        <label class="wide"><span>Notes</span><textarea id="formNotes" rows="3"></textarea></label>
-        <label><span>UPC</span><input id="formUPC" type="text" inputmode="numeric" autocomplete="off" /></label>
-        <div class="form-actions sticky">
-          <button id="saveRecord" class="btn" type="submit" disabled>Save</button>
-        </div>
-      </form>
-    </div>
-  </dialog>
-
-  <!-- Floating Add Button -->
-  <button id="fab" class="fab" aria-haspopup="dialog" aria-controls="fabMenu" aria-label="Add">
-    <span class="fab-plus" aria-hidden="true">＋</span>
+  <!-- FAB (Add) -->
+  <button id="fab" class="fab" aria-label="Add Vinyl" title="Add Vinyl">
+    <span class="fab-plus">＋</span>
   </button>
 
   <!-- FAB menu -->
   <dialog id="fabMenu">
     <div class="sheet">
-      <h3 class="sheet-title">Add <span>Vinyl</span></h3>
+      <h3 class="sheet-title">Add Vinyl</h3>
       <div class="sheet-actions">
         <button id="fabScan" class="btn wide">Scan UPC</button>
         <button id="fabEnter" class="btn wide">Enter UPC Code</button>
       </div>
-      <form method="dialog"><button class="btn small subtle sheet-close">Close</button></form>
+      <form method="dialog" class="sheet-close">
+        <button class="btn small">Close</button>
+      </form>
+    </div>
+  </dialog>
+
+  <!-- Scan modal -->
+  <dialog id="scanModal">
+    <div class="scan-card">
+      <div class="scan-head">
+        <h3 style="margin:0">Scan</h3>
+        <form method="dialog"><button class="btn small">Close</button></form>
+      </div>
+
+      <div class="video-wrap">
+        <video id="camera" playsinline autoplay muted></video>
+        <div class="scan-overlay">
+          <div class="scan-frame"></div>
+        </div>
+        <div class="scan-hint">Point your camera at the barcode.</div>
+      </div>
+
+      <div id="scanStatus" class="scan-status"></div>
+
+      <div class="form-grid">
+        <label>
+          <span>Artist</span>
+          <input id="formArtist" type="text" inputmode="text" autocomplete="off">
+        </label>
+        <label>
+          <span>Title</span>
+          <input id="formTitle" type="text" inputmode="text" autocomplete="off">
+        </label>
+        <label class="wide">
+          <span>Genre</span>
+          <input id="formGenre" type="text" inputmode="text" autocomplete="off">
+        </label>
+        <label class="wide">
+          <span>Notes</span>
+          <textarea id="formNotes" rows="3"></textarea>
+        </label>
+        <label class="wide">
+          <span>UPC</span>
+          <input id="formUPC" type="text" inputmode="numeric" pattern="[0-9]*" autocomplete="off">
+        </label>
+
+        <div class="form-actions sticky">
+          <button id="saveBtn" class="btn">Save</button>
+        </div>
+      </div>
     </div>
   </dialog>
 
   <!-- Enter UPC (manual) -->
   <dialog id="enterUPCModal">
-    <form id="enterUPCForm" class="enter-form" method="dialog">
+    <form class="enter-form" method="dialog">
       <h3>Enter UPC Code</h3>
-      <input id="enterUPCInput" type="text" inputmode="numeric" placeholder="e.g. 602547855215" autocomplete="off" />
+      <input id="enterUPCInput" type="text" inputmode="numeric" pattern="[0-9]*" placeholder="e.g., 602435123456" />
       <div class="enter-actions">
-        <button class="btn small subtle" value="cancel">Cancel</button>
-        <button id="enterUPCSumbit" class="btn small" value="ok">Continue</button>
+        <button class="btn small">Close</button>
+        <button id="enterUPCGo" class="btn small" value="ok">Use</button>
       </div>
     </form>
   </dialog>
 
   <!-- Card template -->
   <template id="cardTpl">
-    <article class="card" role="listitem">
+    <article class="card" role="listitem" tabindex="0" aria-label="Album">
       <div class="sleeve" aria-live="polite">
         <div class="face front">
           <img class="cover" alt="" loading="lazy" referrerpolicy="no-referrer">
+          <button class="share-btn" title="Share">⤴</button>
         </div>
         <div class="face back">
           <div class="meta">
@@ -175,6 +196,9 @@
     </article>
   </template>
 
-  <script src="app.js?v=pages7"></script>
+  <!-- Toasts -->
+  <div id="toastWrap" class="toast-wrap" aria-live="polite" aria-atomic="true"></div>
+
+  <script src="/app.js?v=polish-2025-09-07"></script>
 </body>
 </html>
